--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,17 @@ spring.application.name=course_project
 
 jwt.secret.key=secretHui
 
-
 server.port=8080
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#spring.datasource.url=jdbc:postgresql://db:5432/course_project
 spring.datasource.url=jdbc:postgresql://localhost:5432/course_project
 spring.datasource.username=postgres
 spring.datasource.password=1234
-spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
 
 
+spring.flyway.locations=classpath:db/migration
+spring.flyway.enabled=true
